cmake_minimum_required(VERSION 3.10)
project(cmakehello CXX)
set(VERSION 1.0.0)
add_subdirectory(src/glog)
add_subdirectory(src/googletest)
add_subdirectory(src/rapidjson)
#add_subdirectory(src/rocksdb)
#add_subdirectory(src/leveldb)
#add_subdirectory(src/zstd)
#add_subdirectory(src/xxHash)
add_subdirectory(src/lib)
add_subdirectory(src/main)
