set(GLOG_SOURCE_FILES glog_hello.cc)
set(GTEST_SOURCE_FILES gtest_hello.cc)
set(RAPIDJSON_SOURCE_FILES rapidjson_hello.cc)
set(MY_GLOG_APP gloghello)
set(MY_GTEST_APP gtesthello)
set(MY_RAPIDJSON_APP rapidjsonhello)
set(MY_BOOST_APP boosthello)
add_executable(${MY_GLOG_APP} ${GLOG_SOURCE_FILES})
add_executable(${MY_GTEST_APP} ${GTEST_SOURCE_FILES})
add_executable(${MY_RAPIDJSON_APP} ${RAPIDJSON_SOURCE_FILES})
target_link_libraries(${MY_GLOG_APP} glog)
target_link_libraries(${MY_GTEST_APP} math gtest)
target_include_directories(${MY_GLOG_APP} PRIVATE ${PROJECT_SOURCE_DIR}/src/include)
target_include_directories(${MY_GTEST_APP} PRIVATE ${PROJECT_SOURCE_DIR}/src/include)
target_include_directories(${MY_RAPIDJSON_APP} PRIVATE ${PROJECT_SOURCE_DIR}/src/rapidjson/include)

if (NOT(BOOST_FOUND))
    find_package(Boost 1.71 COMPONENTS ${BOOST_COMPONENTS} REQUIRED)
endif()

if (Boost_FOUND)
    set(MY_BOOST_SOURCE_FILES boost_hello.cc)
    include_directories(${Boost_INCLUDE_DIRS})
    add_executable(${MY_BOOST_APP} ${MY_BOOST_SOURCE_FILES}) 
    target_link_libraries(${MY_BOOST_APP} ${_Boost_COMPONENTS_SEARCHED})
endif()

set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -Wall -Wtype-limits -Wignored-qualifiers -Winit-self")
set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -Wpointer-arith -Werror=format-security -fno-strict-aliasing -fsigned-char")
set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -Wno-unknown-pragmas")
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -ftemplate-depth-1024")
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wnon-virtual-dtor")
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wno-unknown-pragmas")
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wno-ignored-qualifiers")
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -fsanitize=address")
